objects/redwing__ILT_Event_Class__c.object
<CustomObject>
    <fields>
        <fullName>redwing__ILT_Event__c</fullName>
        <label>ILT Event</label>
        <referenceTo>redwing__ILT_Event__c</referenceTo>
        <relationshipLabel>ILT Event Classes</relationshipLabel>
        <relationshipName>ILT_Event_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Learning__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ILT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>ILT Event Classes</relationshipLabel>
        <relationshipName>ILT_Event_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ILT Event Class</label>
    <nameField>
        <displayFormat>ILTEC-{0000000}</displayFormat>
        <label>ILT Event Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILT Event Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>